# swiss_tax_form_stocks

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
tax_form/: __init__.py  __main__.py  main.py
